# personal-finance-dash-app

./: README.md  pyproject.toml
app/: app.py
app/modules/: config.py  database.py  spending_tracker.py
